src2/objects/ContractLineItemMirror__c.object
<CustomObject>
    <fields>
        <fullName>AccountTelemetry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Telemetry Account</label>
        <referenceTo>NES_AccountTelemetry__c</referenceTo>
        <relationshipName>Contract_Line_Items_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssetAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Address</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contract_Line_Items_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Name</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Contract_Line_Items_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractCategory__c</fullName>
        <label>Contract Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                    <label>FREE</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>LEASING</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>MISC.</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>OPERATING</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>PCS</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>RENT</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>SALES</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>TRAIL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractItemId__c</fullName>
        <label>Contract Item Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractItemUUID__c</fullName>
        <externalId>true</externalId>
        <label>Contract Item UUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractLineItemId__c</fullName>
        <externalId>true</externalId>
        <label>Contract Line Item Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipName>Contract_Line_Items_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractState__c</fullName>
        <label>Contract State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractTelemetryOptIn__c</fullName>
        <label>Contract - Telemetry Opt-in</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                    <label>Full</label>
                </value>
                <value>
                    <fullName>EGC</fullName>
                    <label>No Capsule recognition</label>
                </value>
                <value>
                    <fullName>TO</fullName>
                    <label>Technical</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Off</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndTCDate__c</fullName>
        <label>End TC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LineItemNumber__c</fullName>
        <label>Line Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ParentContractLineItemMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract Line Item</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipName>Contract_Line_Items_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessedDate__c</fullName>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Contract_Line_Items_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RootContractLineItemMirrorId__c</fullName>
        <label>Root Contract Line Item Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContractMirror__c</fullName>
        <label>Service Contract</label>
        <referenceTo>ServiceContractMirror__c</referenceTo>
        <relationshipName>Contract_Line_Items_Mirror</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartTCDate__c</fullName>
        <label>Start TC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StopDate__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StopKeepMachineAlive__c</fullName>
        <label>Stop - Keep Machine Alive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopNewContract__c</fullName>
        <label>Stop - New Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopOldContract__c</fullName>
        <label>Stop - Previous Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopTCDate__c</fullName>
        <label>Stop TC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Code__c</fullName>
        <label>Stop Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Stop_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <label>Technician</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TelemetryContractID__c</fullName>
        <label>Telemetry Contract ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Line Item</label>
    <nameField>
        <displayFormat>CLI_{00000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <recordTypes>
        <fullName>Agent_Contract</fullName>
        <active>true</active>
        <label>Agent Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_Contract</fullName>
        <active>true</active>
        <label>Nespresso Contract</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>